# Beaver-Notes

./: .all-contributorsrc  .env.development  .env.development.example  .eslintcache  .eslintrc.json  .gitignore  .oxlintrc.json  AI_POLICY.md  ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  SUMMARY.md  TECHNICAL_DEBT_AUDIT.md  electron-builder.config.cjs  electron-builder.config.js  env.js  index.html  jsconfig.json  knip.json  maintainability-review.md  manifest.json  oxlint.json  package.json  playwright.config.js  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vetur.config.js  vite.config.js  vitest.config.js  wdio.conf.mjs
.gitbook/assets/: command-translations-template.json  en.json  translation-template (1).json  translation-template.json  translations-template.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: ask-a-question-or-get-help.md  bug_report.md
.github/PULL_REQUEST_TEMPLATE/: general_request_template.md  release_request_template.md  release_template.md
.github/workflows/: create_project_card.yml  pr-tests.yml  release-beta.yml  release.yml  release_draft.yml  signing-pr.yml
.superpowers/sdd/: task-5-report.md
buildResources/: entitlements.mac.plist  entitlements.plist  icon-linux.icns  icon.icns
buildResources/beta/: icon.icns
dev-guides/: building-and-testing-beaver-notes.md  how-to-contribute.md  packaging-the-app.md  setup-your-environment.md  translate-beaver.md  translations.md
docs/: knip-baseline.txt
docs/adr/: 0001-appstate-split.md  0002-structured-apperror.md  0003-tauri-specta-ipc.md  0004-typescript-migration.md
e2e-tests/: desktop.smoke.mjs
flatpak/: com.beavernotes.beavernotes.metainfo.xml
scripts/: build.js  buildEnvTypes.js  bump-version.mjs  command-aliases.json  compile.js  generate-commands.mjs  loadAndSetEnv.mjs  notarize.js  run-e2e.sh  tauri-dev-server.mjs  transDiff.js  translationUtil.js  update-electron-vendors.js  updateTranslations.js  watch.js  watch.mjs  xcode-rust-build.sh
src/: App.vue  env.d.ts  index.js  router.js
src-tauri/: Cargo.toml  Info.ios.plist  entitlements.plist  generated-commands.json  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  ios.json  mobile.json
src-tauri/src/: bootstrap.rs  commands.rs  db.rs  lib.rs  main.rs  menu.rs  secure_blob.rs  shared.rs  specta_setup.rs
src-tauri/src/commands/: app.rs  dialogs.rs  external.rs  fs.rs  imports.rs  mod.rs  pdf.rs  plugins.rs  search.rs  security.rs  storage.rs  updates.rs  workspace.rs  yjs.rs
src-tauri/src/shared/: cache.rs  crypto.rs  error.rs  mod.rs  state.rs
src-tauri/src/shared/crypto/: assets.rs  keys.rs  legacy.rs  mod.rs  tests.rs
src/components/: AppEncryptionGate.vue
src/composable/: clipboard.js  dialog.js  dragAndDrop.js  editorImage.js  ghost.js  groupTooltip.js  meta-yjs-doc.js  meta-yjs-store.js  onClose.js  safeStorage.js  selection.js  settings.js  storage.js  theme.js  useAccountAuth.js  useAccountStorage.js  useAppShell.js  useAppShellActions.js  useAppShellBanners.js  useAppShellLayout.js  useDragGhost.js  useEditorAutoScroll.js  useExport.js  useFocusTrap.js  useGlobalShortcuts.js  useImport.js  useImportExport.js  useNoteBackNavigation.js  useNoteEncryption.js  useNoteMenu.js  useNoteMenuActions.js  useNoteMenuState.js  useNotePersistence.js  useNoteYjs.js  useNotesBrowser.js  useNotesBrowserTouch.js  useOnboardingFlow.js  useOverlayDrawing.js  usePaperBlockBus.js  useScrollLock.js  (+14 more)
src/directives/: VTooltip.js
src/lib/: comps-ui.js  tauri-bridge.js  tippy.js  v-remixicon.js
src/pages/: Index.vue  Onboarding.vue  Settings.vue
src/plugins/: ConflictRegistry.js  CoreAccess.js  Plugin.js  PluginAPI.js  PluginError.js  PluginEvents.js  PluginLoader.js  PluginManager.js  PluginRegistry.js  PluginSandbox.js  PluginStorage.js  index.js  semver.js
src/store/: account.js  app.js  app.ts  folder.js  folder.ts  i18n.js  i18n.ts  index.js  index.ts  label.js  label.ts  note.js  note.ts  passwd.js  passwd.ts  plugins.js  undo.js  undo.ts  workspace.js  workspace.ts
src/utils/: appCrypto.js  cardPreview.js  contentSecurity.js  convert.js  copy-doc.js  copy-image.js  crypto-codec.js  crypto-constants.js  crypto-worker.js  deletedIds.js  direction.js  encryption.js  encryptionCoordinator.js  getTranslations.js  global-shortcuts.js  helper.js  iosKeyboard.js  keyboard-navigation.js  legacy-lock.js  markdown-helper.js  markdown.js  noteContentUtils.js  (+14 more)
user-guides/: callouts.md  code-block.md  getting-around.md  installation.md  labels.md  markdown-syntax.md  security.md  set-up-the-sync.md
(+302 files in other folders)
