[package]
name = "beaver-notes"
version = "5.0.0"
description = "Beaver Notes"
authors = ["Daniele Rolli"]
license = "MIT"
repository = "https://github.com/Beaver-Notes/Beaver-Notes"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "beaver_notes"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-audio-recorder = "0.1"
tauri-plugin-single-instance = "2"
tauri-plugin-safe-area-insets-css = { path = "../vendor/tauri-plugin-safe-area-insets-css" }
tauri-plugin-pdf-render = { path = "../vendor/tauri-plugin-pdf-render" }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bcrypt = "0.15"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
aes = "0.8"
cbc = "0.1"
argon2 = { version = "0.5", features = ["alloc"] }
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
md5 = "0.7"
keyring = "2"
dirs = "5"
lru = "0.12"
yrs = "0.27"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
http = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
urlencoding = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tauri-plugin-swipe-back-ios = "1.0.0"
tauri-plugin-app-icon = "0.1.0"
tauri-plugin-scoped-storage = "=1.5.0"


[target.'cfg(not(target_os = "android"))'.dependencies]
font-kit = "0.14"
tauri-plugin-spotsearch = "0.2.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2"
tauri-plugin-sharesheet = { path = "../vendor/tauri-plugin-sharesheet" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL"] }
objc2-core-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    "NSPrintInfo",
    "NSPrintOperation",
    "NSWindow",
    "NSView",
    "NSResponder",
    "objc2-core-foundation",
] }
block2 = "0.6"
objc2-web-kit = { version = "0.3", features = [
    "block2",
    "objc2-core-foundation",
    "objc2-app-kit",
] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
block2 = "0.6"
objc2-web-kit = { version = "0.3", features = ["block2", "objc2-core-foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2"
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com"] }

[patch.crates-io]
mac-notification-sys = { path = "../vendor/mac-notification-sys" }
tauri-plugin-spotsearch = { path = "../vendor/tauri-plugin-spotsearch" }

[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev.package.rusqlite]
opt-level = 3
[profile.dev.package.aes-gcm]
opt-level = 3
